Added first version of auto documentation generation